--- a/.storybook/index.scss
+++ b/.storybook/index.scss
@@ -2,43 +2,44 @@ body {
   background-color: #fff;
   margin-top: 0;
 }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-  text-align: left; 
-  width: 100%;
-
-  display: block;
-  overflow-x: auto;
-  padding-bottom: .75rem;
-  white-space: nowrap;
-  td,
-  th {
-    border: none !important;
-    border-bottom: .05rem solid #dadee4 !important;
-    padding: .6rem .4rem !important;
+#root > div > div > div > div:nth-child(2) {
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    text-align: left; 
+    width: 100%;
+  
+    display: block;
+    overflow-x: auto;
+    padding-bottom: .75rem;
+    white-space: nowrap;
+    td,
+    th {
+      border: none !important;
+      border-bottom: .05rem solid #dadee4 !important;
+      padding: .6rem .4rem !important;
+    }
+    th {
+      border-bottom-width: .1rem;
+    }
   }
-  th {
-    border-bottom-width: .1rem;
+  
+  pre {
+    button {
+      line-height: 1.3;
+    }
   }
-}
-
-pre {
-  button {
-    line-height: 1.3;
+  
+  h1 {
+    font-size: .9rem;
   }
-}
-
-h1 {
-  font-size: .9rem;
-}
-h2 {
-  font-size: .8rem ;
-}
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 100;
-  letter-spacing: .04rem;
+  h2 {
+    font-size: .8rem ;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 100;
+    letter-spacing: .04rem;
+  }
 }
 #story-root {
   border: 1px solid rgb(238, 238, 238);
