--- a/.storybook/index.scss
+++ b/.storybook/index.scss
@@ -2,46 +2,60 @@ body {
   background-color: #fff;
   margin-top: 0;
 }
-#root > div > div > div > div:nth-child(2) {
-  table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    text-align: left; 
-    width: 100%;
-  
-    display: block;
-    overflow-x: auto;
-    padding-bottom: .75rem;
-    white-space: nowrap;
-    td,
-    th {
-      border: none !important;
-      border-bottom: .05rem solid #dadee4 !important;
-      padding: .6rem .4rem !important;
+#root > div > div {
+  &:nth-child(2) > div {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  &> div {
+    border: none !important;
+    &> div:nth-child(2) {
+      overflow: auto;
+      max-height: 70vh;
+      height: 100%;
+      table {
+        border-collapse: collapse;
+        border-spacing: 0;
+        text-align: left; 
+        width: 100%;
+      
+        display: table;
+        padding-bottom: .75rem;
+        white-space: nowrap;
+        td,
+        th {
+          border: none !important;
+          border-bottom: .05rem solid #dadee4 !important;
+          padding: .6rem .4rem !important;
+        }
+        th {
+          border-bottom-width: .1rem;
+        }
+      }
+      
+      pre {
+        button {
+          line-height: 1.3;
+        }
+      }
+      
+      h1 {
+        font-size: .8rem !important;
+        font-weight: bold !important;
+      }
+      h2 {
+        font-size: .8rem ;
+      }
+      h2, h3, h4, h5, h6 {
+        font-weight: 100;
+        letter-spacing: .04rem;
+      }
     }
-    th {
-      border-bottom-width: .1rem;
-    }
-  }
-  
-  pre {
-    button {
-      line-height: 1.3;
-    }
-  }
-  
-  h1 {
-    font-size: .9rem;
-  }
-  h2 {
-    font-size: .8rem ;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    font-weight: 100;
-    letter-spacing: .04rem;
   }
 }
 #story-root {
-  border: 1px solid rgb(238, 238, 238);
+  border: none;// 1px solid rgb(238, 238, 238);
   border-radius: 2px;
 }
